# py-scripts-for-life

./: .gitignore  LICENSE  README.md  START_HERE.txt  pyproject.toml  simple_test.py  test_youtube_downloader.py  test_ytdlp.py
src/: main.py
src/password_manager/: README.md  __init__.py  app.py  crypto.py  generator.py  global_variables.py  modes.py  options.py  password_generator.py  password_manager.py
src/py_scripts_for_life/: lib.py  main.py
src/py_scripts_for_life/calculator/: calculator.py
src/py_scripts_for_life/password_manager/: README.md  app.py  database.py  modes.py
src/py_scripts_for_life/shared/: __init__.py  authenticators.py  graphics.py
src/py_scripts_for_life/video_converter/: README.md  app.py  constants.py  converter.py  mode.py
src/py_scripts_for_life/youtube_downloader/: README.md  app.py  downloader.py
src/py_scripts_for_life/yt-to-mp3/: README.md  __init__.py
src/py_scripts_for_life/yt_dl_cv/: app.py  constants.py  converter.py  downloader.py
src/shared/: __init__.py  graphics.py
src/yt-to-mp3/: README.md
tests/: __init__.py
