[tool.poetry]
name = "py-scripts-for-life"
version = "0.1.0"
description = "A collection of practical Python utilities and tools for everyday tasks."
authors = ["Benedict Angelo <BenedictAngelo@protonmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/BenedictAngelo/py-scripts-for-life"
homepage = "https://github.com/BenedictAngelo/py-scripts-for-life"
keywords = ["utilities", "password-manager", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

packages = [
    { include = "py_scripts_for_life", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^46.0.5"
requests = "^2.32.5"
pytube = "^15.0.0"

[tool.poetry.scripts]
py-scripts-for-life = "py_scripts_for_life.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
